# DeviceAbout_

./: .gitignore  CMakeLists.txt  DeviceAbout.h  main.cpp
DeviceAbout/: CMakeLists.txt  DeviceAbout.h
DeviceAbout/impl/: DeviceAbout.cpp
impl/: DeviceAbout.cpp
